# Comp_arch2_Lab2

./: CMakeLists.txt  Makefile  README.md
include/: calculator.h
src/: main.cpp
